Added Imgur gallery link

--- a/README
+++ b/README
@@ -27,6 +27,8 @@ This repo contains:
  - PDF file of the component schematic - for easy viewing
 
 The /pics folder shows some snaps of the building of the device in different stages.
+Also, check out the Imgur gallery:
+https://imgur.com/gallery/hHFEcQb
  
 The video briefly showing the device in action, can be found on YouTube:
 https://youtu.be/manwS1O5PpQ
